profilelist1exp/unpackaged/objects/Oppt_Description_History__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>SOM_14.5 - Use this field to indicates values in Description before it is last modified</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SOM_14.5 - Who is the person that last modified this Description</description>
        <label>Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Description_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modified_Date__c</fullName>
        <description>SOM_14.5 - When the Description is last modified</description>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SOM_14.5 - Use this to create relationship with Opportunity (master)</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Description History</relationshipLabel>
        <relationshipName>Opportunity_Description_History2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Description History</label>
    <nameField>
        <displayFormat>HISTORY-{00000}</displayFormat>
        <label>Description Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Description History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>